--- a/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bi-vb-appendix-rules.html
+++ b/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bi-vb-appendix-rules.html
@@ -148,19 +148,19 @@
 <p>Sp 2.659: <i translate='no' lang='pli'>Kāyena kāyaṁ āmasatīti bhikkhunī yathāparicchinnena kāyena purisassa yaṁkiñci kāyaṁ puriso vā yena kenaci kāyena bhikkhuniyā yathāparicchinnaṁ kāyaṁ āmasati, ubhayathāpi bhikkhuniyā pārājikaṁ</i>. <i translate='no' lang='pli'>Yathāparicchinnena</i>, “as delimited”, presumably refers to the fact that the touching must be below the collar bone and above the knees. <a epub:type='backlink' href='#introduction-noteref-2' role='doc-backlink'>↩</a></p>
 </li>
 <li epub:type='endnote' id='introduction-note-3'>
-<p>Sarvāstivāda Vinaya, fascicle 42 (Part 1 of the seventh recitation chapter): 若比丘尼有漏心，聽漏心男子髮際以下至腕膝以上却衣，順摩、逆摩、牽推、按掐、抱上、抱下，是比丘尼得波羅夷不共住。」 <a epub:type='backlink' href='#introduction-noteref-3' role='doc-backlink'>↩</a></p>
+<p>Sarvāstivāda Vinaya, fascicle 42 (Part 1 of the seventh recitation chapter): <span lang='lzh' translate='no'>若比丘尼有漏心，聽漏心男子髮際以下至腕膝以上却衣，順摩、逆摩、牽推、按掐、抱上、抱下，是比丘尼得波羅夷不共住。」</span> <a epub:type='backlink' href='#introduction-noteref-3' role='doc-backlink'>↩</a></p>
 </li>
 <li epub:type='endnote' id='introduction-note-4'>
-<p>Mūlasarvāstivāda bhikkhunī vinaya, fascicle 5: 「若復苾芻尼自有染心，共染心男子，從目已下、膝已上，作受樂心身相摩觸、若極摩觸。於如是事，此苾芻尼亦得波羅市迦，不應共住。」 <a epub:type='backlink' href='#introduction-noteref-4' role='doc-backlink'>↩</a></p>
+<p>Mūlasarvāstivāda bhikkhunī vinaya, fascicle 5: <span lang='lzh' translate='no'>「若復苾芻尼自有染心，共染心男子，從目已下、膝已上，作受樂心身相摩觸、若極摩觸。於如是事，此苾芻尼亦得波羅市迦，不應共住。」</span> <a epub:type='backlink' href='#introduction-noteref-4' role='doc-backlink'>↩</a></p>
 </li>
 <li epub:type='endnote' id='introduction-note-5'>
-<p>Mahīśāsaka Vibhaṅga, pj 5: 「若比丘尼，欲盛變心，受男子種種摩觸：髮際已下，膝已上，肘已後。是比丘尼得波羅夷，不共住。」 <a epub:type='backlink' href='#introduction-noteref-5' role='doc-backlink'>↩</a></p>
+<p>Mahīśāsaka Vibhaṅga, pj 5: <span lang='lzh' translate='no'>「若比丘尼，欲盛變心，受男子種種摩觸：髮際已下，膝已上，肘已後。是比丘尼得波羅夷，不共住。」</span> <a epub:type='backlink' href='#introduction-noteref-5' role='doc-backlink'>↩</a></p>
 </li>
 <li epub:type='endnote' id='introduction-note-6'>
-<p>Mahāsaṅghika Vibhaṅga, pj 5: 若比丘尼漏心。漏心男子邊肩以下膝以上摩觸受樂者。是比丘尼波羅夷不應共住。 <a epub:type='backlink' href='#introduction-noteref-6' role='doc-backlink'>↩</a></p>
+<p>Mahāsaṅghika Vibhaṅga, pj 5: <span lang='lzh' translate='no'>若比丘尼漏心。漏心男子邊肩以下膝以上摩觸受樂者。是比丘尼波羅夷不應共住。</span> <a epub:type='backlink' href='#introduction-noteref-6' role='doc-backlink'>↩</a></p>
 </li>
 <li epub:type='endnote' id='introduction-note-7'>
-<p>Dharmaguptaka Vibhaṅga, pj 5: 若比丘尼染污心，共染污心男子，從腋已下膝已上身相觸，若捉摩、若牽、若推、若上摩、若下摩、若舉、若下、若捉、若捺，是比丘尼波羅夷，不共住。是身相觸也。」 <a epub:type='backlink' href='#introduction-noteref-7' role='doc-backlink'>↩</a></p>
+<p>Dharmaguptaka Vibhaṅga, pj 5: <span lang='lzh' translate='no'>若比丘尼染污心，共染污心男子，從腋已下膝已上身相觸，若捉摩、若牽、若推、若上摩、若下摩、若舉、若下、若捉、若捺，是比丘尼波羅夷，不共住。是身相觸也。」</span> <a epub:type='backlink' href='#introduction-noteref-7' role='doc-backlink'>↩</a></p>
 </li>
 <li epub:type='endnote' id='introduction-note-8'>
 <p>Sp 2.676: <i translate='no' lang='pli'>Yā pana ekaṁ vā vatthuṁ satta vā vatthūni satakkhattumpi pūreti, neva assamaṇī hoti</i>. <a epub:type='backlink' href='#introduction-noteref-8' role='doc-backlink'>↩</a></p>
