--- a/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/kd-1-introduction.html
+++ b/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/kd-1-introduction.html
@@ -380,8 +380,8 @@ This is the teaching of the Great Ascetic.”<a epub:type='noteref' href='#intro
 <li epub:type='endnote' id='introduction-note-35'>
 <p>In the Suttas, we find the <i translate='no' lang='pli'>bhiṅkāra</i> used by the wheel-turning monarch to sprinkle the wheel gem, e.g. at <a href="https://suttacentral.net/dn17/en/sujato">DN 17</a>. <a epub:type='backlink' href='#introduction-noteref-35' role='doc-backlink'>↩</a></p>
 </li>
-<li id="fn36">
-<p>See, for instance, the description of purification by water in Śatapatha-brāhmaṇa 1.1.1 at https://www.wisdomlib.org/hinduism/book/satapatha-brahmana-english/d/doc63113.html.</p>
+<li epub:type='endnote' id='introduction-note-36'>
+<p>See, for instance, the description of purification by water in Śatapatha-brāhmaṇa 1.1.1 at <a href="https://www.wisdomlib.org/hinduism/book/satapatha-brahmana-english/d/doc63113.html">↩</a>.</p>
 <p><a href="https://suttacentral.net/en/brahmali#fnref36" class="footnote-back" role="doc-backlink">↩︎</a></p>
 </li>
 <li epub:type='endnote' id='introduction-note-37'>
