--- a/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bibliography.html
+++ b/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bibliography.html
@@ -1,4 +1,4 @@
-<article class='introduction'>
+<article class='bibliography'>
 <h1>Bibliography</h1>
 <ol class='bibliography-list'>
 <li>Anālayo, Bhikkhu. 2010. “The Influence of Commentarial Exegesis on the Transmission of Āgama Literature” in Translating Buddhist Chinese: Problems and Prospects, Harrassowitz, Wiesbaden.</li>
