--- a/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bibliography.html
+++ b/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bibliography.html
@@ -33,9 +33,9 @@
 <li>Nyanatusita, Bhikkhu, ed. 2010. <i translate='no' lang='pli'>Bhikkhunī Pātimokkha Pāḷi</i>. Buddhist Publication Society, Kandy.</li>
 <li>Ñāṇatusita, Bhikkhu. 2014. “Analysis of the Bhikkhu Patimokkha”, Kandy: Buddhist Publication Society.</li>
 <li>Ñāṇatusita, Bhikkhu. 2014. “Pali Manuscripts of Sri Lanka”. In: “From Birch Bark to Digital Data: Recent Advances in Buddhist Manuscript Research, Papers Presented at the Conference Indic Buddhist Manuscripts: The State of the Field, Stanford, June 15–19 2009”, Paul Harrison and Jens-Uwe Hartmann, eds., Vienna, pp. 351–387.</li>
-<li>Norman, K. R. 1983. “Pāli Literature<i translate='no' lang='pli'>”,</i> Otto Harrassowitz, Wiesbaden.</li>
+<li>Norman, K. R. 1983. “Pāli Literature”, Otto Harrassowitz, Wiesbaden.</li>
 <li>Norman, K. R. 1992. “Pāli Lexicographical Studies IX”, In Journal of the Pali Text Society XVI, 1992, pp. 77–85.</li>
-<li>Norman, K. R. 2006. “A Philological Approach to Buddhism<i translate='no' lang='pli'>”,</i> PaIi Text Society.</li>
+<li>Norman, K. R. 2006. “A Philological Approach to Buddhism”, PaIi Text Society.</li>
 <li>Ohnuma Reiko. 2013. “Bad Nun: Thullanandā in Pāli Canonical and Commentarial Sources”. Journal of Buddhist Ethics, volume 20, pp. 18–66.</li>
 <li>Olivelle, Patrick, trans. 2013. “King, Governance, and Law in Ancient India: Kauṭilya’s Arthaśāstra”, Oxford University Press Inc.</li>
 <li>Pachow, W. 1955. “A Comparative Study of the Prātimokṣa”, Motilal Banarsidass, Delhi, 2000.</li>
