update vinaya matter files.

--- a/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bibliography.html
+++ b/_publication/en/brahmali/editions/vinaya/pli-tv-vi/matter/bibliography.html
@@ -55,7 +55,7 @@
 <li>Thiradhammo, Bhikkhu. 1993. “Corrections to the Book of the Discipline”, in the Journal of the Pali Text Society, Vol. XIX, pp. 65–68.</li>
 <li>Trenckner, V, begun by; revised, continued and edited by Dines Anderson and Helmer Smith and others. 2001. “A Critical Pali Dictionary”, The Pali Text Society, Oxford.</li>
 <li>Tropical Plants Database, Ken Fern. Tropical.theferns.info. 2024–10–15. Http://tropical.theferns.info/viewtropical.php?id=Plectranthus+elegans, accessed 15 October 2024.</li>
-<li>University of Tuebingen: Height datahub (2015) – processed by Our World in Data. “Human Height (University of Tuebingen (2015))” [dataset], https://ourworldindata.org/grapher/average-height-of-men-for-selected-countries?country=~IND, accessed 10 February 2024.</li>
+<li>University of Tuebingen: Height datahub (2015) – processed by Our World in Data. “Human Height (University of Tuebingen (2015))” [dataset], https://ourworldindata.org/grapher/average-height-of-men-for-selected-countries?country=IND, accessed 10 February 2024.</li>
 <li>Vimala, Bhikkhu*nī. 2021. “Through the Yellow Gate: Ordination of Gender-Nonconforming People in the Buddhist Vinaya”, Academia, https://www.academia.edu/45662764/Through_the_Yellow_Gate_Ordination_of_Gender_Nonconforming_People_in_the_Buddhist_Vinaya, accessed 10 February 2024.</li>
 <li>Vimalanyani, Bhikkhunī, trans. 5 June 2024 (last updated: 20 September 2024). “Mahāsaṅghika Vinaya, Bhikkhunī Pātimokkha”, https://vimalanyani.github.io/vinaya-lzh/mg/pm/, accessed 13 October 2024.</li>
 <li>Wikipedia contributors. “True hermaphrodism.” Wikipedia, The Free Encyclopedia, 20 January 2024, https://en.wikipedia.org/w/index.php?title=True_hermaphroditism&amp;oldid=1197351960, accessed 10 February 2024.</li>
